# postgres-migration

./: .gitignore  README.md  TODO.md  db-migration-lock.json  flake.nix  parse.sql  postgres-migration.cabal
app/: Main.hs  MigrationTableTypes.hs  OldMain.hs  SqlParser.hs  Types.hs
db-migration/common/: accounts.sql  configurations.sql  migration_000_000_0010_baseline.sql
db-migration/dev/: accounts.sql  configurations.sql  migration_000_000_0000_baseline.sql  migration_000_000_0001_baseline.sql  migration_000_000_0002_baseline.sql
