cabal-version:      2.4
name:               postgres-migration
version:            0.1.0.0
author:             Abhishek Singh

executable postgres-migration
    main-is:                Main.hs
    -- other-modules:          Storage.Types.Address
    --              ,          Storage.Types.Album
    --              ,          Storage.Types.Artist
    --              ,          Storage.Types.Customer
    --              ,          Storage.Types.DB
    --              ,          Storage.Types.InMemDb
    --              ,          Storage.Types.Employee
    --              ,          Storage.Types.Genre
    --              ,          Storage.Types.Invoice
    --              ,          Storage.Types.InvoiceLine
    --              ,          Storage.Types.MediaType
    --              ,          Storage.Types.Playlist
    --              ,          Storage.Types.PlaylistTrack
    --              ,          Storage.Types.Track
    --              ,          Storage.Queries.Artist
    --              ,          Storage.Queries.DBQueries
    -- default-extensions:    StandaloneDeriving
    --                   ,    FlexibleInstances
    --                   ,    MultiParamTypeClasses
    --                   ,    TypeFamilies
    --                   ,    DeriveGeneric
    --                   ,    DeriveAnyClass
    --                   ,    DuplicateRecordFields
    --                   ,    FlexibleContexts
    --                   ,    OverloadedStrings
    --                   ,    RecordWildCards
    --                   -- ,    AllowAmbiguousTypes
    default-extensions:    OverloadedStrings
                      ,    DeriveGeneric
                      ,    DeriveAnyClass
                      ,    DuplicateRecordFields
    build-depends:         base
                 ,         scientific
                 ,         time
                 ,         text
                 ,         postgresql-simple
                 ,         template-haskell
                 ,         bytestring
                 ,         directory
                 ,         cryptonite
                 ,         aeson
                 ,         regex-tdfa
                 ,         aeson-pretty
    ghc-options: -Wall
    hs-source-dirs:        app
    default-language: Haskell2010
