cabal-version:      2.4
name:               postgres-migration
version:            0.1.0.0
author:             Abhishek Singh

executable postgres-migration
    main-is:                Main.hs
    -- other-modules:          Storage.Types.Migration
    --              ,          Storage.Queries.Migration
    --              ,          Storage.Queries.DBQueries
    -- default-extensions:    StandaloneDeriving
    --                   ,    FlexibleInstances
    --                   ,    MultiParamTypeClasses
    --                   ,    TypeFamilies
    --                   ,    DeriveGeneric
    --                   ,    DeriveAnyClass
    --                   ,    DuplicateRecordFields
    --                   ,    FlexibleContexts
    --                   ,    OverloadedStrings
    --                   ,    RecordWildCards
    --                   -- ,    AllowAmbiguousTypes
    default-extensions:    OverloadedStrings
                      ,    DeriveGeneric
                      ,    DeriveAnyClass
                      ,    DuplicateRecordFields
                      ,    ScopedTypeVariables
    build-depends:         base
                 ,         scientific
                 ,         time
                 ,         text
                 ,         postgresql-simple
                 ,         template-haskell
                 ,         bytestring
                 ,         directory
                 ,         cryptonite
                 ,         aeson
                 ,         regex-tdfa
                 ,         aeson-pretty
    ghc-options: -Wall
    hs-source-dirs:        app
    default-language: Haskell2010
