cabal-version:      2.4
name:               postgres-migration
version:            0.1.0.0
author:             Abhishek Singh

executable postgres-migration
    main-is:                Main.hs
    other-modules:          SqlParser
                 ,          Types
                 ,          MigrationTableTypes
    default-extensions:    OverloadedStrings
                      ,    DeriveGeneric
                      ,    DeriveAnyClass
                      ,    DuplicateRecordFields
                      ,    ScopedTypeVariables
                      ,    DerivingStrategies
    build-depends:         base
                 ,         scientific
                 ,         time
                 ,         text
                 ,         postgresql-simple
                 ,         template-haskell
                 ,         bytestring
                 ,         directory
                 ,         cryptonite
                 ,         aeson
                 ,         regex-tdfa
                 ,         aeson-pretty
                 ,         attoparsec
                 ,         parsec
                 ,         utf8-string
    ghc-options: -Wall
    hs-source-dirs:        app
    default-language: Haskell2010
